--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shimmer: ^2.0.0
   url_launcher: ^6.1.7
   lottie: ^2.2.0
+  webview_flutter: ^4.0.1
 
 dev_dependencies:
   flutter_test:
